# VcpkgTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
